# spice_server

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  static_installs.pb.txt  vlsir
docker/: Dockerfile  README.md
example_client/: README.md  client.py  generate_protobufs.sh  requirements.txt
include/: embedded_python_netlister.h  netlister.h  simulator_manager.h  simulator_registry.h  simulator_service.h  subprocess.h
proto/: spice_simulator.proto
src/: embedded_python_netlister.cc  main.cc  netlister.cc  simulator_manager.cc  simulator_registry.cc  simulator_service.cc  subprocess.cc  utility.h
testdata/cmos_inverter/: main.sp
testdata/cmos_inverter_hdl21/: .gitignore  inverter.py  run.sh
testdata/cmos_inverter_xyce/: inverter.sp  main.sp
tests/: embedded_python_netlister_test.cc  main_test.cc  netlister_test.cc
